fix overflow-x bug

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,6 +16,7 @@ body {
   padding: 0;
   font-family: $light;
   background-color: $blue;
+  overflow-x: hidden;
   &:before {
     content: '';
     position: absolute;
